cdk.out/alb-stack.template.json
{
 "Parameters": {
  "SsmParameterValuetransendenceclusterfrontendecsservicearnC96584B6F00A464EAD1953AFF4B05118Parameter": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/transendence-cluster/frontend/ecs/service-arn"
  },
  "SsmParameterValuetransendenceclusterbackendecsservicearnC96584B6F00A464EAD1953AFF4B05118Parameter": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/transendence-cluster/backend/ecs/service-arn"
  },
  "transendencealbCertParamParameter": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/transendence-dev-cert/ecs/certificate"
  },
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Resources": {
  "transendencealbA0DD9043": {
   "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
   "Properties": {
    "LoadBalancerAttributes": [
     {
      "Key": "deletion_protection.enabled",
      "Value": "false"
     }
    ],
    "Scheme": "internet-facing",
    "SecurityGroups": [
     {
      "Fn::GetAtt": [
       "transendencealbSecurityGroup931419BD",
       "GroupId"
      ]
     }
    ],
    "Subnets": [
     "subnet-0e2f758e11dd8b4ce",
     "subnet-047ff4a8a4caeb881"
    ],
    "Type": "application"
   },
   "Metadata": {
    "aws:cdk:path": "alb-stack/transendence-alb/Resource"
   }
  },
  "transendencealbSecurityGroup931419BD": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Automatically created Security Group for ELB albstacktransendencealb3BBA6F61",
    "SecurityGroupEgress": [
     {
      "CidrIp": "255.255.255.255/32",
      "Description": "Disallow all traffic",
      "FromPort": 252,
      "IpProtocol": "icmp",
      "ToPort": 86
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow from anyone on port 80",
      "FromPort": 80,
      "IpProtocol": "tcp",
      "ToPort": 80
     },
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow from anyone on port 443",
      "FromPort": 443,
      "IpProtocol": "tcp",
      "ToPort": 443
     }
    ],
    "VpcId": "vpc-05d70e43ff4b66d37"
   },
   "Metadata": {
    "aws:cdk:path": "alb-stack/transendence-alb/SecurityGroup/Resource"
   }
  },
  "transendencealbHttpRedirectListenerB6FA0EFA": {
   "Type": "AWS::ElasticLoadBalancingV2::Listener",
   "Properties": {
    "DefaultActions": [
     {
      "RedirectConfig": {
       "Port": "443",
       "Protocol": "HTTPS",
       "StatusCode": "HTTP_302"
      },
      "Type": "redirect"
     }
    ],
    "LoadBalancerArn": {
     "Ref": "transendencealbA0DD9043"
    },
    "Port": 80,
    "Protocol": "HTTP"
   },
   "Metadata": {
    "aws:cdk:path": "alb-stack/transendence-alb/HttpRedirectListener/Resource"
   }
  },
  "transendencealbHttpsListener2432D3EA": {
   "Type": "AWS::ElasticLoadBalancingV2::Listener",
   "Properties": {
    "Certificates": [
     {
      "CertificateArn": {
       "Ref": "transendencealbCertParamParameter"
      }
     }
    ],
    "DefaultActions": [
     {
      "TargetGroupArn": {
       "Ref": "transendencealbfrontendTGA6A52B9A"
      },
      "Type": "forward"
     }
    ],
    "LoadBalancerArn": {
     "Ref": "transendencealbA0DD9043"
    },
    "Port": 443,
    "Protocol": "HTTPS"
   },
   "Metadata": {
    "aws:cdk:path": "alb-stack/transendence-alb/HttpsListener/Resource"
   }
  },
  "transendencealbHttpsListenerApiRouteRuleBA6C8E72": {
   "Type": "AWS::ElasticLoadBalancingV2::ListenerRule",
   "Properties": {
    "Actions": [
     {
      "TargetGroupArn": {
       "Ref": "transendencealbbackendTG5A613075"
      },
      "Type": "forward"
     }
    ],
    "Conditions": [
     {
      "Field": "path-pattern",
      "PathPatternConfig": {
       "Values": [
        "/api/*"
       ]
      }
     }
    ],
    "ListenerArn": {
     "Ref": "transendencealbHttpsListener2432D3EA"
    },
    "Priority": 1
   },
   "Metadata": {
    "aws:cdk:path": "alb-stack/transendence-alb/HttpsListener/ApiRouteRule/Resource"
   }
  },
  "transendencealbHttpsListenerAvatarsRouteRuleA10A4037": {
   "Type": "AWS::ElasticLoadBalancingV2::ListenerRule",
   "Properties": {
    "Actions": [
     {
      "TargetGroupArn": {
       "Ref": "transendencealbbackendTG5A613075"
      },
      "Type": "forward"
     }
    ],
    "Conditions": [
     {
      "Field": "path-pattern",
      "PathPatternConfig": {
       "Values": [
        "/avatars/*"
       ]
      }
     }
    ],
    "ListenerArn": {
     "Ref": "transendencealbHttpsListener2432D3EA"
    },
    "Priority": 2
   },
   "Metadata": {
    "aws:cdk:path": "alb-stack/transendence-alb/HttpsListener/AvatarsRouteRule/Resource"
   }
  },
  "transendencealbHttpsListenerDefaultRouteRuleDAE2F398": {
   "Type": "AWS::ElasticLoadBalancingV2::ListenerRule",
   "Properties": {
    "Actions": [
     {
      "TargetGroupArn": {
       "Ref": "transendencealbfrontendTGA6A52B9A"
      },
      "Type": "forward"
     }
    ],
    "Conditions": [
     {
      "Field": "path-pattern",
      "PathPatternConfig": {
       "Values": [
        "/*"
       ]
      }
     }
    ],
    "ListenerArn": {
     "Ref": "transendencealbHttpsListener2432D3EA"
    },
    "Priority": 10
   },
   "Metadata": {
    "aws:cdk:path": "alb-stack/transendence-alb/HttpsListener/DefaultRouteRule/Resource"
   }
  },
  "transendencealbfrontendTGA6A52B9A": {
   "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
   "Properties": {
    "HealthCheckPath": "/",
    "Matcher": {
     "HttpCode": "200"
    },
    "Port": 80,
    "Protocol": "HTTP",
    "TargetGroupAttributes": [
     {
      "Key": "stickiness.enabled",
      "Value": "false"
     }
    ],
    "TargetType": "ip",
    "VpcId": "vpc-05d70e43ff4b66d37"
   },
   "Metadata": {
    "aws:cdk:path": "alb-stack/transendence-alb-frontend-TG/Resource"
   }
  },
  "transendencealbbackendTG5A613075": {
   "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
   "Properties": {
    "HealthCheckPath": "/api/health",
    "Matcher": {
     "HttpCode": "200"
    },
    "Port": 3000,
    "Protocol": "HTTP",
    "TargetGroupAttributes": [
     {
      "Key": "stickiness.enabled",
      "Value": "false"
     }
    ],
    "TargetType": "ip",
    "VpcId": "vpc-05d70e43ff4b66d37"
   },
   "Metadata": {
    "aws:cdk:path": "alb-stack/transendence-alb-backend-TG/Resource"
   }
  },
  "transendencealbEndpointB4946DD4": {
   "Type": "AWS::SSM::Parameter",
   "Properties": {
    "Name": "/transendence-alb/ecs/alb",
    "Type": "String",
    "Value": {
     "Fn::GetAtt": [
      "transendencealbA0DD9043",
      "DNSName"
     ]
    }
   },
   "Metadata": {
    "aws:cdk:path": "alb-stack/transendence-albEndpoint/Resource"
   }
  },
  "transendenceAliasRecord8A8741E6": {
   "Type": "AWS::Route53::RecordSet",
   "Properties": {
    "AliasTarget": {
     "DNSName": {
      "Fn::Join": [
       "",
       [
        "dualstack.",
        {
         "Fn::GetAtt": [
          "transendencealbA0DD9043",
          "DNSName"
         ]
        }
       ]
      ]
     },
     "HostedZoneId": {
      "Fn::GetAtt": [
       "transendencealbA0DD9043",
       "CanonicalHostedZoneID"
      ]
     }
    },
    "HostedZoneId": "Z05665242V72OKDJR354Z",
    "Name": "transendence.dev.yospace.ai.",
    "Type": "A"
   },
   "Metadata": {
    "aws:cdk:path": "alb-stack/transendenceAliasRecord/Resource"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/7VSTU8CMRD9LfRoSsUlXrihB0NilIDxsiFmaEeslOnaD4g2/e9mC5hFPXjx0LTz5s2bmc5UohpUYtCDne9Lte4bvRRpHkCu+Qy9jU5izc4Y/+Us+PUzTcHBBgM6Djv/lNCAD1oaC2oJBkhqWm0rkcZNY7SEoC3dWlBXxYeu/i7XdfJukPYB6TTgRy1H0m+Bs2iwyyl2h/cAboXhxtnYtLSOmTnKSqQ5yuh0eC9Yndi2kWxUsiv00ummVTkgYIzdjY25j2FpIyk2egbjMfPEQKkJrRx631bARnViEmhCRhPukeAiciYtEcpW0x9EI+m3iBNVzMxTLr0X4cU/KpefPWk+c+837ZI4Tauv+deJNcf3HWzwoO0L6xFM3CP5dGsydzYGvByKNJ6htE7ViX1YOoa7gnX0QhnMsdI/U0vWfYI5hpwzn76HF0vnQ3FRiWHv1Wvdd5GC3 [...]
   },
   "Metadata": {
    "aws:cdk:path": "alb-stack/CDKMetadata/Default"
   }
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
